# ants-vision

./: ocr.py  pyproject.toml  requirements-dev.txt  requirements.txt  voice.py
typings/paddleocr/: __init__.pyi  __main__.pyi  _abstract.pyi  _cli.pyi  _common_args.pyi  _constants.pyi  _env.pyi
typings/paddleocr/_models/: __init__.pyi  _image_classification.pyi  _object_detection.pyi  _text_detection.pyi  base.pyi  doc_img_orientation_classification.pyi  doc_vlm.pyi  formula_recognition.pyi  layout_detection.pyi  seal_text_detection.pyi  table_cells_detection.pyi  table_classification.pyi  table_structure_recognition.pyi  text_detection.pyi  text_image_unwarping.pyi  text_recognition.pyi  textline_orientation_classification.pyi
typings/paddleocr/_pipelines/: __init__.pyi  base.pyi  doc_preprocessor.pyi  doc_understanding.pyi  formula_recognition.pyi  ocr.pyi  pp_chatocrv4_doc.pyi  pp_doctranslation.pyi  pp_structurev3.pyi  seal_recognition.pyi  table_recognition_v2.pyi  utils.pyi
typings/paddleocr/_utils/: cli.pyi  deprecation.pyi  logging.pyi
typings/pyttsx3/: __init__.pyi  driver.pyi  engine.pyi  voice.pyi
typings/sounddevice/: __init__.pyi
typings/sounddevice/numpy/_core/: __init__.pyi
typings/sounddevice/numpy/_typing/: __init__.pyi
typings/sounddevice/numpy/_utils/: __init__.pyi
typings/sounddevice/numpy/char/: __init__.pyi
typings/sounddevice/numpy/f2py/: __init__.pyi
typings/sounddevice/numpy/fft/: __init__.pyi
typings/sounddevice/numpy/lib/: __init__.pyi
typings/sounddevice/numpy/linalg/: __init__.pyi
(+9 files in other folders)
