[project]
name = "vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.1.1",
    "paddlepaddle>=3.1.0",
    "paho-mqtt>=2.1.0",
    "pyttsx3>=2.99",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.2",
    "vosk>=0.3.45",
]
